--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ body {
 .content {
   display: flex;
   margin-top: 30px;
-  flex-direction: row;
+  flex-direction: row-reverse;
   align-items: center;
   justify-content: space-evenly;
 }
@@ -115,7 +115,7 @@ body {
 }
 
 .order button:hover {
-  box-shadow: #e3a129 0px 5px 20px;
+  box-shadow: #e3a129 5px 5px 20px;
   transition: ease-out 0.4s;
 }
 
@@ -227,4 +227,137 @@ body {
   align-items: center;
   justify-content: space-evenly;
   gap: 30px;
+}
+
+.toggle-button {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+  cursor: pointer;
+}
+
+.toggle-button span {
+  width: 100%;
+  height: 3px;
+  background-color: #333;
+}
+
+@media screen and (max-width: 768px) {
+  .toggle-button {
+    display: flex;
+  }
+
+  .links {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: white;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    z-index: 1000;
+  }
+
+  .links a {
+    padding: 15px;
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .login button {
+    display: none;
+  }
+
+  .links.show {
+    display: flex;
+  }
+
+  .content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .text-content {
+    width: 100%;
+  }
+
+  .content img {
+    width: 80%;
+    height: auto;
+    margin-top: 20px;
+  }
+
+  /* Adjust navbar links */
+  .links {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .nav {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  /* Adjust card container */
+  .card-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .social {
+    flex-direction: row;
+    bottom: 0;
+    padding: 5px;
+    left: 5px;
+    height: 50px;
+    background-color: white;
+    width: 100%;
+  }
+
+  .social img {
+    width: 40px;
+    height: 40px;
+  }
+
+  /* Adjust card layout */
+  .card {
+    width: 90%;
+  }
+
+  .card-container {
+    margin-top: 40px;
+  }
+
+  .order {
+    flex-direction: column-reverse;
+    justify-content: center;
+    gap: 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  /* Adjust text size */
+  .text-content h1 {
+    font-size: 36px;
+  }
+
+  .text-content h3 {
+    font-size: 16px;
+  }
+
+  .order button {
+    padding: 10px 20px;
+  }
+
+  /* Adjust social icons */
+  .social img {
+    width: 30px;
+    height: 30px;
+  }
 }
